# autodoc

./: .copier-answers.yml  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-documentation.yml  linting.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml  type-checking.yml
azureml/: conda.yml  eval.yml  eval_prompts.yml  generate.yml  predict.yml  train.yml
data/autora/: code1.txt  code1_sm.txt  data.jsonl  text1.txt
data/autora/prompts/: all_prompt.json
data/sweetpea/: data.jsonl
docs/: conf.py  index.rst
notebooks/: generate.ipynb  import_model.ipynb
src/: .amlignore
src/autora/doc/: util.py
src/autora/doc/classes/: EvalResult.py
src/autora/doc/pipelines/: data.py  main.py  metrics.py  train.py
src/autora/doc/runtime/: predict_hf.py  prompts.py
tests/: test.py  test_main.py  test_metrics.py  test_predict_hf.py  test_util.py
tests/autora_doc/: test_example_module.py
